<resources>
    <string name="app_name">ToDo App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_things_">Your Personal ToDo</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="repass">Confirm Password</string>
    <string name="side_view">side view</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered">Already have an account? </string>
    <string name="sign_in"> Sign In</string>
    <string name="new_user">Don\'t have an account?</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="let_s_start">Let\'s Start!</string>
    <string name="tasks_list">Tasks List</string>
    <string name="add_task">Add Task</string>
    <string name="type_your_task">Type your task</string>
</resources>